--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel = "stylesheet" href = "style.css" />
     <script src = "script.js" type = "text/javascript"></script>
     <title>Personal Website</title>
+   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Port+Lligat+Sans&family=Press+Start+2P&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
     <header>
@@ -42,15 +54,6 @@
                 other hobbies include rock climbing, surfing, hiking, and anything else in nature. </p>
             </section>
 
-            <section class = "orgs">
-                <h2>University Organizations</h2>
-                <ul>
-                    <li>Open Project</li>
-                    <li>ColorStack</li>
-                    <li>Cal Climbing Team</li>
-                </ul>
-
-            </section>
 
             <section class="projects">
                 <h2>Projects</h2>
@@ -81,6 +84,16 @@
                   </div>
                 </div>
               </section>
+
+
+              <section class = "orgs">
+                <h2>University Organizations</h2>
+                <ul>
+                    <li>Open Project</li>
+                    <li>ColorStack</li>
+                    <li>Cal Climbing Team</li>
+                </ul>
+            </section>
 
         </div>
     </div>
