--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel = "stylesheet" href = "style.css" />
     <script src = "script.js" type = "text/javascript"></script>
     <title>Personal Website</title>
+    <meta name="theme-color" content = "#10142B"/>
    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
